app-ols-integration/main/default/objects/Contact/fields/Bounce_Reported__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the Online Store Customer record type. Indicates whether or not an automated email was bounced after payment registration via the Online Store Web Application and that that bounce was reported.</description>
    <inlineHelpText>Indicates whether or not an automated email was bounced after payment registration via the Online Store Web Application and that that bounce was reported.</inlineHelpText>
    <label>Bounce Reported</label>
    <type>Checkbox</type>
</CustomField>