app-ols-integration/main/default/objects/Contact/fields/Brochure_Key__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Key__c</fullName>
    <description>This is the name of a file stored. This file represents a pdf brochure that is sent out in a welcome email to a new Online Store Customer.</description>
    <inlineHelpText>This is the name of a file stored. This file represents a pdf brochure that is sent out in a welcome email to a new Online Store Customer.</inlineHelpText>
    <label>Brochure Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>