app-ols-integration/main/default/objects/Contact/fields/Brochure_URL__c.field-meta.xml
<CustomField>
    <fullName>Brochure_URL__c</fullName>
    <description>URL that can be used to link to brochures in welcome emails for Online Store Customers.</description>
    <label>Brochure URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>