app-ols-integration/main/default/objects/Contact/fields/CAID__c.field-meta.xml
<CustomField>
    <fullName>CAID__c</fullName>
    <description>An Id that is generated by DDMI when an Online Store Customer and their payment method has been approved. It is a unique External Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>An Id that is generated by DDMI when an Online Store Customer and their payment method has been approved. It is a unique External Id.</inlineHelpText>
    <label>CAID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>