app-ols-integration/main/default/objects/Contact/fields/Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <description>The date coverage starts for an OLS Contact.</description>
    <inlineHelpText>The date coverage starts.</inlineHelpText>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>