app-ols-integration/main/default/objects/Contact/fields/Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Carrier__c</fullName>
    <description>This is for Online Store Customers. It is the name a prior carrier.</description>
    <inlineHelpText>This is for Online Store Customers. It is the name a prior carrier.</inlineHelpText>
    <label>Current Carrier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>