app-ols-integration/main/default/objects/Contact/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>For Online Store Customer record type. This is the customer Id that is store over at DDMI after an Online Store Customer is processed by DDMI&apos;s application.</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>