app-ols-integration/main/default/objects/Contact/fields/Days_Since_End_Of_Prior_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_End_Of_Prior_Coverage__c</fullName>
    <description>For an Online Store Customer. This is the amount of days between end of prior coverage and enrollment.</description>
    <inlineHelpText>This is the amount of days between end of prior coverage and enrollment.</inlineHelpText>
    <label>Days Since End Of Prior Coverage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>