app-ols-integration/main/default/objects/Contact/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This is for Online Store Customers. It is the effective date of a policy with a prior carrier.</description>
    <inlineHelpText>This is for Online Store Customers. It is the effective date of a policy with a prior carrier.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>