app-ols-integration/main/default/objects/Contact/fields/Eligible_For_Waiting_Period_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Waiting_Period_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for an Online Store Customer. Indicates whether or not this customer is eligible for a waiting period.</description>
    <inlineHelpText>Indicates whether or not this customer is eligible for a waiting period.</inlineHelpText>
    <label>Eligible For Waiting Period Waiver</label>
    <type>Checkbox</type>
</CustomField>