app-ols-integration/main/default/objects/Contact/fields/Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the Online Store Customer record type. Indicates whether or not an automated email was bounced after payment registration via the Online Store Web Application.</description>
    <inlineHelpText>Indicates whether or not an automated email was bounced after payment registration via the Online Store Web Application.</inlineHelpText>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>