app-ols-integration/main/default/objects/Contact/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the Online Store Customer record type. Indicates whether or not an automated email was sent after payment registration via the Online Store Web Application.</description>
    <inlineHelpText>Indicates whether or not an automated email was sent after payment registration.</inlineHelpText>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>