app-ols-integration/main/default/objects/Contact/fields/Email_Validated__c.field-meta.xml
<CustomField>
    <fullName>Email_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Online Store Customer records. Checked if the email has been validated by an external API at whoisxmlapi.com.</description>
    <label>Email Validated</label>
    <type>Checkbox</type>
</CustomField>