app-ols-integration/main/default/objects/Contact/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This is for Online Store Customers. It is the end date of a policy with a prior carrier.</description>
    <inlineHelpText>This is for Online Store Customers. It is the end date of a policy with a prior carrier.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>