app-ols-integration/main/default/objects/Contact/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>Group Number provided from OLS WebApp.</description>
    <inlineHelpText>Group Number provided from OLS WebApp.</inlineHelpText>
    <label>Group Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>