app-ols-integration/main/default/objects/Contact/fields/Initial_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Amount__c</fullName>
    <description>This is the amount paid by an Online Store Customer when they successfully enroll and payment is processed.</description>
    <inlineHelpText>This is the amount paid by an Online Store Customer when they successfully enroll and payment is processed.</inlineHelpText>
    <label>Initial Payment Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>