app-ols-integration/main/default/objects/Contact/fields/Length_Of_Prior_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Prior_Coverage__c</fullName>
    <description>For an Online Store Customer. This is the amount of days between effective date and end date of prior coverage.</description>
    <inlineHelpText>This is the amount of days between effective date and end date of prior coverage.</inlineHelpText>
    <label>Length Of Prior Coverage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>