app-ols-integration/main/default/objects/Contact/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <description>For Online Store Customer record type.</description>
    <label>Payment Frequency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>