app-ols-integration/main/default/objects/Contact/fields/Payment_Successful__c.field-meta.xml
<CustomField>
    <fullName>Payment_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the Online Store Customer record type. Indicates whether or not the payment was successful.</description>
    <inlineHelpText>Indicates whether or not the payment was successful.</inlineHelpText>
    <label>Payment Successful</label>
    <type>Checkbox</type>
</CustomField>