app-ols-integration/main/default/objects/Contact/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>For Online Store Customer record type. The way by which an Online Store Customer will pay their bill.</description>
    <inlineHelpText>The way by which an Online Store Customer will pay their bill.</inlineHelpText>
    <label>Payment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>