app-ols-integration/main/default/objects/Contact/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>This is for Online Store Customers. It is the number of a policy with a prior carrier.</description>
    <inlineHelpText>This is for Online Store Customers. It is the number of a policy with a prior carrier.</inlineHelpText>
    <label>Policy Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>