app-ols-integration/main/default/objects/Contact/fields/Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchased__c</fullName>
    <description>Product Purchased by a Contact that is now an Online Store Customer.</description>
    <inlineHelpText>Product Purchased by a Contact that is now an Online Store Customer.</inlineHelpText>
    <label>Product Purchased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>