app-ols-integration/main/default/objects/Contact/fields/State_Acronym__c.field-meta.xml
<CustomField>
    <fullName>State_Acronym__c</fullName>
    <description>The state acronym for Online Store Customer. This is used to determine what welcome email to send out.</description>
    <inlineHelpText>The state acronym for Online Store Customer. This is used to determine what welcome email to send out.</inlineHelpText>
    <label>State Acronym</label>
    <length>12</length>
    <type>Text</type>
</CustomField>