app-ols-integration/main/default/objects/Contact/fields/Sub_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Sub_Client_Id__c</fullName>
    <description>Sub Client Id provided from OLS WebApp.</description>
    <inlineHelpText>Group Number provided from OLS WebApp.</inlineHelpText>
    <label>Sub Client Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>