app-ols-integration/main/default/objects/Contact/recordTypes/Online_Store_Customer.recordType-meta.xml
<RecordType>
    <fullName>Online_Store_Customer</fullName>
    <active>true</active>
    <description>This contact is an individual who purchased a product or products from DDMN&apos;s WebApp&apos;s Online Store</description>
    <label>Online Store Customer</label>
</RecordType>